<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/start_choose_role_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_role"
        android:textAppearance="?android:textAppearanceLarge"/>

    <Button
        android:id="@+id/start_central_client_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/start_choose_role_text_view"
        android:layout_marginTop="16dp"
        android:text="@string/central_client"/>

    <Button
        android:id="@+id/start_peripheral_server_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/start_central_client_button"
        android:layout_marginTop="16dp"
        android:text="@string/peripheral_server"/>

</RelativeLayout>