<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="is.handsome.blesample.CentralClientActivity">

    <TextView
        android:id="@+id/central_client_found_device_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_device"
        android:textAppearance="?android:textAppearanceLarge"/>

    <TextView
        android:id="@+id/central_client_device_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/central_client_found_device_name_text_view"
        android:textAppearance="?android:textAppearanceLarge"/>

    <Button
        android:id="@+id/central_client_connect_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/central_client_found_device_name_text_view"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/connect"/>

    <Button
        android:id="@+id/central_client_read_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/central_client_connect_button"
        android:layout_marginTop="16dp"
        android:enabled="false"
        android:text="@string/read"/>


</RelativeLayout>
